crates/test-ui/ui/main_thread_only_not_allocable.stderr
error[E0277]: the trait bound `MainThreadOnly: mutability::private::MutabilityIsAllocableAnyThread` is not satisfied
 --> ui/main_thread_only_not_allocable.rs
  |
  |     let _ = MyMainThreadOnlyClass::alloc();
  |             ^^^^^^^^^^^^^^^^^^^^^ the trait `mutability::private::MutabilityIsAllocableAnyThread` is not implemented for `MainThreadOnly`
  |
  = help: the following other types implement trait `mutability::private::MutabilityIsAllocableAnyThread`:
            Root
            Immutable
            Mutable
            ImmutableWithMutableSubclass<MS>
            MutableWithImmutableSuperclass<IS>
            InteriorMutable
  = note: required for `MyMainThreadOnlyClass` to implement `IsAllocableAnyThread`
note: required by a bound in `objc2::ClassType::alloc`
 --> $WORKSPACE/crates/objc2/src/class_type.rs
  |
  |     fn alloc() -> Option<Allocated<Self>>
  |        ----- required by a bound in this associated function
  |     where
  |         Self: IsAllocableAnyThread,
  |               ^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassType::alloc`
